SoftwareDefined/Lab4/todo-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: todo-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: todo
  template:
    metadata:
      labels:
        app: todo
    spec:
      containers:
      - name: todo
        image: natawut/todo-service:release-2.1
        ports:
        - containerPort: 8000
      - name: redis
        image: redis
        ports:
        - containerPort: 6379
